[gd_scene load_steps=2 format=3 uid="uid://defsoyqoq70rl"]

[ext_resource type="Script" uid="uid://5oojnp8lr36l" path="res://info_label.gd" id="1_gme1s"]

[node name="InfoLabel" type="HBoxContainer"]
script = ExtResource("1_gme1s")

[node name="TitleLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Title:"

[node name="ValueLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "thing"
horizontal_alignment = 2
